# yt-dlp-gui

./: pyproject.toml
.github/workflows/: build.yml  release.yaml
app/: app.py
app/ui/: app_ui.py  download_ui.py
