[project]
name = "yt-dlp-gui"
version = "0.1.0"
description = "A cross-platform GUI wrapper for yt-dlp written in PySide6"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyside6==6.7.2",
    "requests>=2.32.3",
    "toml==0.10.2",
    "tqdm==4.66.5",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.8",
]
